--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     
     });
 
-    BABYLON.SceneLoader.ImportMeshAsync("", "https://aannewball.github.io/myCoolBabylonApp/", "mico.glb").then((result) => {
+    BABYLON.SceneLoader.ImportMeshAsync("", "https://github.com/Jdavidruanob/changos-webGL", "chinchorro.glb").then((result) => {
     	result.meshes[1].position.x = 4;
         result.meshes[1].material = roofMat;
         result.meshes[1].rotate  = new BABYLON.Vector3(0, 45, 0);
@@ -152,3 +152,4 @@
     </script>
 </body>
 </html>
+
