update 3Dobject scala

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         hojaMesh.position.y = 0.5; // Elevar un poco si es necesario
         
         // 3. Ajustar escala (Probablemente necesites ajustarla mucho para una planta)
-        hojaMesh.scaling = new BABYLON.Vector3(0.05, 0.05, 0.05); // Ejemplo de escala pequeña
+        hojaMesh.scaling = new BABYLON.Vector3(0.005, 0.005, 0.005); // ¡Mucho más pequeño! 
         
         // 4. Rotar si es necesario
         hojaMesh.rotation.y = BABYLON.Tools.ToRadians(45);
@@ -173,6 +173,7 @@
     </script>
 </body>
 </html>
+
 
 
 
