Add hoewa_Forsteriana.glb model and update related mesh loading code in index.html

--- a/index.html
+++ b/index.html
@@ -92,20 +92,20 @@
             // =========================================================================
             // 1. MALLA DE TU MUNDO ORIGINAL (CHINCHORRO)
             // =========================================================================
-            BABYLON.SceneLoader.ImportMeshAsync("", "https://jdavidruanob.github.io/webGL-scene/", "chinchorro.glb").then((result) => {
+            /* BABYLON.SceneLoader.ImportMeshAsync("", "https://jdavidruanob.github.io/webGL-scene/", "chinchorro.glb").then((result) => {
                 const chinchorroMesh = result.meshes[1];
                 chinchorroMesh.position.x = 4;
                 chinchorroMesh.material = roofMat;
                 // Nota: la propiedad 'rotate' no existe, debes usar 'rotation'
                 chinchorroMesh.rotation.y = BABYLON.Tools.ToRadians(45); 
                 chinchorroMesh.scaling = new BABYLON.Vector3(0.5, 0.5, 0.5);
-            });
+            }); */
 
             // =========================================================================
             // 2. OBJETO CON MAPA DE NORMALES (HOEWA FORSTERIANA)
             // Requisito CLAVE de la consigna.
             // =========================================================================
-            /* BABYLON.SceneLoader.ImportMeshAsync("", "https://jdavidruanob.github.io/webGL-scene/", "hoewa_Forsteriana.glb").then((result) => {
+            BABYLON.SceneLoader.ImportMeshAsync("", "https://jdavidruanob.github.io/webGL-scene/", "hoewa_Forsteriana.glb").then((result) => {
                 const hojaMesh = result.meshes[1];
                 
                 // Aplicamos el material con el mapa de normales (mat1)
@@ -116,7 +116,7 @@
                 hojaMesh.rotation.y = BABYLON.Tools.ToRadians(45);
                 // Si ya ajustaste la escala en Blender, este valor debe ser 1 o un ajuste leve.
                 // Lo dejamos en 0.05 por si acaso, pero ajústalo si es necesario.
-            }); */
+            });
 
 
             /* // =========================================================================
